# C-project---Fabryka-Samochod-w

./: README.md
Etap1/: CMakeLists.txt  Fabryka.cpp  Fabryka.h  Samochod.cpp  Samochod.h  main.cpp  readme.md
Etap2/: CMakeLists.txt  Fabryka.cpp  Fabryka.h  Komis.cpp  Komis.h  Lakiernik.cpp  Lakiernik.h  Motocykl.cpp  Motocykl.h  Pojazd.h  PojazdSilnikowy.h  Rower.h  Samochod.cpp  Samochod.h  Wlasciciel.cpp  Wlasciciel.h  main.cpp  readme.md  stdinTrybulowskaEwelina.txt
Etap3/: CMakeLists.txt  Exception.h  Fabryka.h  Komis.cpp  Komis.h  Lakiernik.h  Motocykl.cpp  Motocykl.h  Pojazd.cpp  Pojazd.h  Rower.cpp  Rower.h  Samochod.cpp  Samochod.h  Wlasciciel.h  main.cpp  naglowki.h  readme.md  stdinTrybulowskaEwelina.txt
