cmake_minimum_required(VERSION 3.17)
project(TrybulowskaEwelina-etap2)

set(CMAKE_CXX_STANDARD 14)


add_executable(TrybulowskaEwelina-etap2
        Fabryka.cpp
        Komis.cpp
        main.cpp
        Motocykl.cpp
        Pojazd.cpp
        Rower.cpp
        Samochod.cpp
        Lakiernik.cpp
        Wlasciciel.cpp
    )


